fix spacing

--- a/packages/assets/scss/03-organisms/_header-hamburger.scss
+++ b/packages/assets/scss/03-organisms/_header-hamburger.scss
@@ -477,7 +477,6 @@ body.show-menu {
 
         @media ($bp-header-toggle-min) {// Override original.
           display: inline-block;
-          padding-left: 30px;
           vertical-align: middle;
         }
       }
